# Python

ex1/: ft_plot_area.py
ex2/: ft_harvest_total.py
py00/: test.py
py00/ex1/: ft_plot_area.py
py00/ex2/: ft_harvest_total.py
py00/ex3/: ft_plant_age.py
py00/ex4/: ft_water_reminder.py
py00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py00/ex6/: ft_garden_summary.py
py00/ex7/: ft_seed_inventory.py
py01/ex0/: ft_garden_intro.py
py01/ex1/: ft_garden_data.py
py01/ex2/: ft_plant_growth.py
py01/ex3/: ft_plant_factory.py
py01/ex4/: ft_garden_security.py
py01/ex5/: ft_plant_types.py
py01/ex6/: ft_garden_analytics.py
py02/: ft_different_errors.py  ft_first_exception.py  test.py
py02/ex0/: ft_first_exception.py
py02/ex1/: ft_different_errors.py
py02/ex2/: ft_custom_errors.py
py02/ex3/: ft_finally_block.py
py02/ex4/: ft_raise_errors.py
py02/ex5/: ft_garden_management.py
py03/ex0/: ft_command_quest.py
py03/ex1/: ft_score_analytics.py
py03/ex2/: ft_coordinate_system.py
py03/ex3/: ft_achievement_tracker.py
py03/ex4/: ft_inventory_system.py
py03/ex5/: ft_data_stream.py
py03/ex6/: ft_analytics_dashboard.py
py04/ex0/: ft_ancient_text.py
py04/ex1/: ft_archive_creation.py
py06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
py07/: battle.py  capacitor.py  tournament.py
py08/ex1/: loading.py  pyproject.toml
(+37 files in other folders)
