[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis with numpy, pandas, matplotlib"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"